--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "cookie-parser": "1.3.2",
     "express": "~4.16.0",
     "promise": "^8.0.1",
+    "python": "0.0.4",
+    "python-shell": "^0.5.0",
+    "python3": "0.0.1",
     "querystring": "~0.2.0",
     "readline-sync": "^1.4.9",
     "request": "~2.83.0",
